[gd_scene load_steps=5 format=3 uid="uid://dqjw525a76dft"]

[ext_resource type="PackedScene" uid="uid://css301rnh0cd7" path="res://scenes/level_editor/assets/level_editor_menu/time_line/time_line_grid.tscn" id="1_7xl1h"]
[ext_resource type="Script" path="res://scenes/level_editor/assets/level_editor_menu/time_line/time_line.gd" id="1_d446y"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rtyhx"]
content_margin_top = 29.0
bg_color = Color(0.105882, 0.109804, 0.129412, 1)
corner_radius_top_left = 9
corner_radius_top_right = 9

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mm6yf"]
bg_color = Color(0.286275, 0.294118, 0.352941, 1)
border_width_top = 2
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="TimeLine" type="VBoxContainer"]
custom_minimum_size = Vector2(300, 0)
size_flags_horizontal = 3
theme_override_constants/separation = 11
script = ExtResource("1_d446y")

[node name="TimeLineBox" type="VBoxContainer" parent="."]
clip_contents = true
layout_mode = 2
theme_override_constants/separation = -1

[node name="TimeBar" type="Panel" parent="TimeLineBox"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_rtyhx")

[node name="TimeLineBox" type="Panel" parent="TimeLineBox"]
custom_minimum_size = Vector2(0, 290)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_mm6yf")

[node name="TimeLineGrid" parent="TimeLineBox/TimeLineBox" instance=ExtResource("1_7xl1h")]
z_index = 1
_bar_color = Color(0.93408, 0.93408, 0.93408, 1)
_beat_color = Color(0.529067, 0.529067, 0.529067, 0.960784)
_layer_color = Color(0.39689, 0.396889, 0.396889, 0.941176)

[node name="TimeLineScroller" type="HScrollBar" parent="."]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
page = 10.0

[connection signal="gui_input" from="TimeLineBox/TimeBar" to="." method="_on_time_bar_gui_input"]
[connection signal="gui_input" from="TimeLineBox/TimeLineBox" to="." method="_on_time_line_box_gui_input"]
[connection signal="mouse_entered" from="TimeLineBox/TimeLineBox" to="." method="_on_time_line_box_mouse_entered"]
[connection signal="mouse_exited" from="TimeLineBox/TimeLineBox" to="." method="_on_time_line_box_mouse_exited"]
[connection signal="scrolling" from="TimeLineScroller" to="." method="_on_time_line_scroller_scrolling"]
